bugfix: add overflow-x-hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html,
+body,
+main,
+header {
+  overflow-x: hidden;
+}
